<resources>
    <string name="app_name">Todo</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="enter_name">Enter Name</string>
    <string name="search">search</string>
    <string name="channel_name">todoChannel</string>
    <string name="channel_description">Todo Notification</string>
    <string name="cancel">cancel</string>
</resources>
